announcement for pass game dialog - updated catalog button * 9 - ver1 game ui - ver 1 pass game dialog - set announcement for hint - updated hint button - set activity 6 - ver 2 activity 5 - ver 1 image button * 9 - set button listener - set GameLevel class * 9 - set

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="app_name">Final2</string>
-    <color name="backGround">#f3e6b6</color>
+    <string name="app_name">Mystic 125</string>
+    <color name="backGround">#F3E5B6</color>
+    <color name="designBlue">#aabcff</color>
+    <color name="designRed">#Ffaae6</color>
+    <color name="designGreen">#aaffc2</color>
 </resources>
